--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,7 +7,7 @@ android {
     compileSdk 31
 
     defaultConfig {
-        applicationId "com.example.jeezyfashion"
+        applicationId "com.jenni.jeezyfashion"
         minSdk 19
         targetSdk 31
         versionCode 1
